# Study-Test.Online

doc/: challenge-schema.yaml  questions-db.yaml  questions-schema.yaml  solutions-exampl.json  solutions-schema.yaml  study-test-api.yaml  study-test.info
docker/backend/: Dockerfile  challengs.json
docker/frontend/: Dockerfile  asset-manifest.json  index.html
docker/frontend/static/css/: main.0d0bc7ce.css  main.0d0bc7ce.css.map
docker/frontend/static/js/: main.22598a77.js  main.22598a77.js.map
src/backend/: CMakeLists.txt  tags
src/backend/src/: CMakeLists.txt  main.cpp
src/backend/src/appDataORM/: CMakeLists.txt  appDataManager.cpp  appDataManager.h
src/backend/src/appEngine/: CMakeLists.txt  testManager.cpp  testManager.h
src/backend/src/handlers/: OAIApiRouter.cpp  OAIApiRouter.h  OAIChallengesAdministratorApiHandler.cpp  OAIChallengesAdministratorApiHandler.h  OAIChallengesUsersApiHandler.cpp  OAIChallengesUsersApiHandler.h  OAISessionUsersApiHandler.cpp  OAISessionUsersApiHandler.h
src/backend/src/models/: OAIAnswer.cpp  OAIAnswer.h  OAIAnswer_answers_inner.cpp  OAIAnswer_answers_inner.h  OAIChallenge.cpp  OAIChallenge.h  OAIChallengeID.h  (+23 more)
src/backend/tests/: CMakeLists.txt  backAppQtTest.cpp  backAppQtTest.h
src/backend/tests/data-for-test-getTestResults()/: fsessions.json  fsessions.json.tst  questions.json  solutions.json  solutions.json.tst  u.restore.sh
src/frontend/: package-lock.json  package.json
src/frontend/src/: App.css  App.js
src/testEngine/: testEngine.cpp  testEngine.h
store/: challenge.json  challengs.json  questions.json
(+32 files in other folders)
